# OpenCV-Task

./: CMakeLists.txt  CMakeSettings.json  main.cpp
